--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,10 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+cmd/bin/watcher-daemon
+
+*.swo
+*.swp
+*.bak
+*.orig
